--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.3",
     "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "rsuite": "^4.10.10",
     "web-vitals": "^2.1.4"
   },
